--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-    "extends": "react-app",
-    "rules": {
-        "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
-    }
+  "extends": "react-app"
 }
