--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "note-app",
+  "name": "note-app-server",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
+  "type": "module",
   "main": "server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.msj"
+    "start": "nodemon server.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.7.3",
-    "body-parser": "^1.20.2",
+    "@apollo/server": "^4.3.0",
+    "@graphql-tools/schema": "^9.0.12",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.9.0",
+    "firebase-admin": "^11.4.1",
+    "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
     "http": "^0.0.1-security",
     "moment": "^2.29.4",
-    "mongoose": "^7.2.4",
-    "nodemon": "^2.0.22"
+    "mongoose": "^6.8.2",
+    "nodemon": "^2.0.20",
+    "ws": "^8.11.0"
   }
 }
