Update server url

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,12 @@
 MONGODB_URI = mongodb+srv://admin:0000@cluster0.mooongk.mongodb.net/noteApp
+
+
+API_KEY = AIzaSyAdMwVlp0_Zt6UUSCigZpYChIlnZuftXAU
+AUTH_DOMAIN = note-app-f7f01.firebaseapp.com
+PROJECT_ID = note-app-f7f01
+STORAGE_BUCKET = note-app-f7f01.appspot.com
+MESSAGING_SENDER_ID = 836638932128
+APP_ID = 1:836638932128:web:bdf5038ede48bfd8ba5dc5
+MEASUREMENT_ID = G-JY311NT4NH
+
+
